src/main/kotlin/com/example/pensionkeybackend/global/error/ErrorProperty.kt
package com.example.pensionkeybackend.global.error

interface ErrorProperty {

    fun status(): Int

    fun message(): String
}
